--- a/lib/httpServer/views/index.pug
+++ b/lib/httpServer/views/index.pug
@@ -49,7 +49,7 @@ block content
                                 td #{formatters.dateToMomentAgo(artifact.lastUpdate)}
                                 td #{formatters.metadataObjectToList(artifact.metadata)}    
                                 td
-                                    a(href=`${formatters.buildURL(artifact)}&download`) download
+                                    a(href=`${formatters.buildURL(artifact)}`) download
                 // nav.pagination.is-centered(role="navigation", aria-label="pagination")                
                     ul.pagination-list
                         li                    
