--- a/lib/httpServer/views/layout.pug
+++ b/lib/httpServer/views/layout.pug
@@ -3,8 +3,11 @@ html(lang="en")
     head
         title Arte - #{pageTitle}
         meta(name="viewport", content="width=device-width, initial-scale=1")
-        link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css")        
-        script(src="https://use.fontawesome.com/releases/v5.0.0/js/all.js", defer)        
+        link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css")
+        link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/balloon-css/0.5.0/balloon.min.css")        
+        script(src="https://use.fontawesome.com/releases/v5.0.0/js/all.js", defer)
+        script(src="https://cdn.rawgit.com/zenorocha/clipboard.js/master/dist/clipboard.js")
+        script(src="https://cdnjs.cloudflare.com/ajax/libs/zepto/1.2.0/zepto.js")                
         style(type='text/css').
     body
         nav.navbar.is-info
@@ -19,6 +22,14 @@ html(lang="en")
                         a.navbar-item(href="/login", class=`${pageTitle=='Option' ? 'is-active' : ''}`) Login                        
         block content
         script.
+            Zepto(function($){
+                new ClipboardJS('.copy', {
+                    text: function(e) {
+                        return e.getAttribute('data-clipboard-text');
+                    }
+                });
+            })
+
             function searchArtifact(e) {
                 var bucketSelect = document.getElementById('bucketSelect');
                 var bucket = bucketSelect[bucketSelect.selectedIndex].value;
@@ -35,3 +46,5 @@ html(lang="en")
                 window.location.href = url;
                 e.preventDefault();
             }
+
+            
