Improve UI by adding support to the login and logout feature

--- a/lib/httpServer/views/index.pug
+++ b/lib/httpServer/views/index.pug
@@ -16,7 +16,7 @@ block content
                     .field-label.is-normal
                         label.label Artifact
                     p.control.is-expanded
-                        input.input(id='artifactTextbox', type="text", placeholder="Artifact1", onInput='updateFormState(event)', value=`${artifactName ? artifactName : ''}`)
+                        input.input(id='artifactTextbox', type="text", placeholder="Artifact1", value=`${artifactName ? artifactName : ''}`)
                     .field-label.is-normal
                         label.label Version
                     p.control
