Add authorization system to buckets and sets a dummy credential to anonymous users

--- a/lib/httpServer/views/layout.pug
+++ b/lib/httpServer/views/layout.pug
@@ -36,7 +36,7 @@ html(lang="en")
             .navbar-menu
                 .navbar-end
                     .navbar-item
-                        if user
+                        if credential && !credential.roles.includes('anonymous')
                             a.button.is-primary(href="/logout", class=`${pageTitle=='Logout' ? 'is-active' : ''}`) Logout
                         else
                             a.button.is-primary(href="/login", class=`${pageTitle=='Login' ? 'is-active' : ''}`) Login                                
