--- a/lib/httpServer/views/login.pug
+++ b/lib/httpServer/views/login.pug
@@ -16,7 +16,7 @@ block content
                                     p.help.is-danger#usernameAlert(style='display: none;') The username cannot be empty
                                 .field
                                     label.label Password
-                                    input.input#passwordTextbox(type='text', placeholder='password')
+                                    input.input#passwordTextbox(type='password', placeholder='password')
                                     p.help.is-danger#passwordAlert(style='display: none;') The password cannot be empty
                                 hr
                                 h2.title-2.has-text-centered.has-text-weight-bold OR
