Add profile page and minor UI improvements

--- a/lib/httpServer/views/grant.pug
+++ b/lib/httpServer/views/grant.pug
@@ -3,6 +3,7 @@ extends layout.pug
 block content
     .section
         .container
+            h1.title.has-text-centered Create a token
             .columns
                 .column.is-half.is-offset-one-quarter
                     .box
