--- a/lib/httpServer/views/index.pug
+++ b/lib/httpServer/views/index.pug
@@ -2,7 +2,8 @@ extends layout.pug
 
 block content
     .section
-        .container               
+        .container   
+            h1.title.has-text-centered Artifacts
             form(action='javascript:void(0);', onSubmit='searchArtifact(event);')        
                 .field.is-grouped.is-grouped-multiline
                     .field-label.is-normal
